# Smile

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
smile/: calc_sequential_flow_and_blur.py  compute_depth_images.py  export_synthesised_views.py  fig_paging.py  image_filtering.py  integrate_depth_images.py  pipeline_server.py  select_and_position_inter_key_aux_frames.py  select_key_frames.py  stitch_key_frames.py  view_synthesis.py  weighting_functions.py
