[tool.poetry]
name = "Smile"
version = "0.0.1"
description = "Utility to automatically stitch sequences of intraoral images from a low cost dental camera into a synthetic panoramic view"
authors = ["Mark Hsieh <304629098+mcmhsieh@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
opencv-contrib-python = "^4.10.0.84"
open3d = "^0.18.0"
matplotlib = "^3.9.0"
spyder = "^5.5.4"
pyqt5-qt5 = "5.15.2"
pyqtwebengine-qt5 = "5.15.2"
torch = {version = "^2.3.1+cu121", source = "pytorch_cuda"}
torchvision = {version = "^0.18.1+cu121", source = "pytorch_cuda"}
torchaudio = {version = "^2.3.1+cu121", source = "pytorch_cuda"}
pomegranate = "^1.1.0"
scikit-image = "^0.24.0"
shapely = "^2.0.5"
rsatoolbox = "0.2.0"
trimesh = "^4.12.2"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
